--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ section{
    top:0;
    margin:0 auto;
    max-width: 1200px;
-   background-color: var(--white);
+   background-color:#21a774;
    padding:2rem;
    display: flex;
    align-items: center;
